# DistributedTemperatureControlSystem

./: .gitignore  CMakeLists.txt  DistAirCond.pro  README.md  changelog.md  db_init.sql
CommonLib/: CommonLib.pro  common.cpp  common.h  commonlib.cpp  commonlib.h  config.cpp  database_defs.cpp  database_defs.h  dbaccess.cpp  dbaccess.h  dbhelper.cpp  dbhelper.h  listener.h  log.cpp  log.h  msg_queen.h  request_base.h  request_controller.cpp  request_controller.h  request_payload.cpp  request_payload.h  requests.h
Master/: Master.pro  airsupplycontroller.cpp  airsupplycontroller.h  detailwidget.cpp  detailwidget.h  detailwidget.ui  getroomtemperaturecontroller.cpp  getroomtemperaturecontroller.h  global.cpp  global.h  listener.h  main.cpp  manager.cpp  manager.h  managercontrolpanel.cpp  managercontrolpanel.h  managercontrolpanel.ui  managerlogincontroller.cpp  managerlogincontroller.h  managerloginwidget.cpp  managerloginwidget.h  managerloginwidget.ui  master_request_controller.cpp  master_request_controller.h  monitor_dialog.cpp  monitor_dialog.h  monitor_dialog.ui  monitordialog.cpp  monitordialog.h  monitordialog.ui  monitorwidget.cpp  monitorwidget.h  operationconfirmationdialog.cpp  operationconfirmationdialog.h  operationconfirmationdialog.ui  parametercontroller.ui  parameterwidget.cpp  parameterwidget.h  parameterwidget.ui  powersupplywidget.cpp  (+38 more)
Slave/: Slave.pro  getinformationcontroller.cpp  getinformationcontroller.h  gettemperaturecontroller.cpp  gettemperaturecontroller.h  listener.h  logincontroller.cpp  logincontroller.h  main.cpp  modealtercontroller.cpp  modealtercontroller.h  sensor.cpp  sensor.h  setspeedcontroller.cpp  setspeedcontroller.h  settemperaturecontroller.cpp  settemperaturecontroller.h  shutdowncontroller.cpp  shutdowncontroller.h  slave_request_controller.cpp  slave_request_controller.h  slavecontrolwindow.cpp  slavecontrolwindow.h  slavecontrolwindow.ui  startupwindow.cpp  startupwindow.h  startupwindow.ui  useandcostcontroller.cpp  useandcostcontroller.h  user.cpp  user.h  userlogindialog.cpp  userlogindialog.h  userlogindialog.ui  userloginwidget.cpp  userloginwidget.h  userloginwidget.ui  windcontroller.cpp  windcontroller.h  windcontrollerfromm.cpp  (+1 more)
doc/db_def/: init.sql
doc/request_format/: AckResponse.json  ForceShutDownRequest.json  WindRequest.json  (+11 more)
include/: common.h  listener.h  request_base.h  request_payload.h  requests.h
